[gd_scene load_steps=18 format=2]

[ext_resource path="res://RECURSOS/Players/bunny2_stand.png" type="Texture" id=1]
[ext_resource path="res://Personaje/Bachicha.gd" type="Script" id=2]
[ext_resource path="res://jumperpack_kenney/PNG/Players/bunny2_stand.png" type="Texture" id=3]
[ext_resource path="res://jumperpack_kenney/PNG/Players/bunny2_walk2.png" type="Texture" id=4]
[ext_resource path="res://jumperpack_kenney/PNG/Players/bunny2_jump.png" type="Texture" id=5]
[ext_resource path="res://jumperpack_kenney/PNG/Players/bunny2_walk1.png" type="Texture" id=6]
[ext_resource path="res://RECURSOS/Sonidos/Jump 9.wav" type="AudioStream" id=7]
[ext_resource path="res://RECURSOS/Items/wing_left.png" type="Texture" id=8]
[ext_resource path="res://RECURSOS/Items/wing_right.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 44.334
height = 55.2402

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.2977, 8.03277 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "iddle",
"speed": 2.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "Correr",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Saltar",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wing_right:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_left:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "EntrarPortal"
tracks/0/type = "value"
tracks/0/path = NodePath("Animacion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animacion:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("wing_right:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, -40.0, 40.0, 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_left:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 40.0, -40.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_right:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_left:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "aclarar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0156863, 0.0156863, 0.0156863, 1 ), Color( 0.0156863, 0.0156863, 0.0156863, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "oscurecer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0392157, 0.0392157, 0.0392157, 0 ), Color( 0.0392157, 0.0392157, 0.0392157, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Bachi" type="KinematicBody2D" groups=[
"Jugador",
]]
position = Vector2( -0.521364, 1.00717 )
scale = Vector2( 0.5, 0.5 )
z_index = 50
collision_layer = 2
collision_mask = 29
script = ExtResource( 2 )
velocidad = Vector2( 400, 900 )
acel_caida = 320
fuerza_salto = 2800

[node name="wing_right" type="Sprite" parent="."]
visible = false
position = Vector2( 43.2697, -92.4148 )
texture = ExtResource( 9 )
offset = Vector2( 40.1172, -15.0568 )

[node name="wing_left" type="Sprite" parent="."]
visible = false
position = Vector2( -41.8111, -93.7512 )
texture = ExtResource( 8 )
offset = Vector2( -40.7926, -14.1659 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -101.802 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="ColisionCuerpo" type="CollisionShape2D" parent="."]
position = Vector2( 0, -84.0292 )
shape = SubResource( 1 )

[node name="ColisionPatas" type="CollisionShape2D" parent="."]
position = Vector2( -0.811356, -9.94724 )
shape = SubResource( 2 )

[node name="AudioSalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -21.443

[node name="Animacion" type="AnimatedSprite" parent="."]
position = Vector2( -0.677704, -103.199 )
frames = SubResource( 3 )
animation = "iddle"

[node name="Camara" type="Camera2D" parent="."]
position = Vector2( 1.49835, -431.026 )
current = true
zoom = Vector2( 1.8, 1.8 )
limit_left = -2000
limit_bottom = 2000
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 4 )
anims/EntrarPortal = SubResource( 5 )
anims/Volar = SubResource( 6 )
anims/aclarar = SubResource( 7 )
anims/oscurecer = SubResource( 8 )

[node name="EnfriamientoPowerUpSalto" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="EnfriamientoPowerUpVolar" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.0431373, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EnfriamientoPowerUpSalto" to="." method="_on_EnfriamientoPowerUp_timeout"]
[connection signal="timeout" from="EnfriamientoPowerUpVolar" to="." method="_on_Timer_timeout"]
